Fixed z-index

--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@ body {
   font-size: 16px;
   color: #000000;
 }
-
 .search-box-icon {
   font-size: 1.5rem;
   margin-left: auto;
@@ -101,4 +100,5 @@ body {
   width: calc(var(--size) - 10px);
   height: calc(var(--size) - 10px);
   color: var(--clr-body);
+  z-index: 9999;
 }
